--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index",
-    "prod": "node index"
+    "dev": "nodemon src/index",
+    "prod": "node src/index"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.6.1"
   }
 }
