--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "author": "Barny Victor",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon server",
-    "start": "node server"
+    "dev": "nodemon src/server",
+    "start": "node src/server"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "express-device": "^0.4.2",
+    "express-session": "^1.17.3",
     "socket.io": "^4.6.1"
   }
 }
