--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "author": "Barny Victor",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon server",
-    "start": "node server"
+    "dev": "nodemon src/server",
+    "start": "node src/server"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "moment": "^2.29.4",
+    "mongoose": "^7.0.1",
     "socket.io": "^4.6.1"
   }
 }
